Adding first post, fixed style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,6 +16,8 @@ MIT License http://opensource.org/licenses/MIT
 html, body {
   height: auto;
   min-height: 100%;
+  background-color: $dark-gray;
+  color: $white;
 }
 
 img {
