--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,12 +1,13 @@
 // Typography
 $base-font-size: 14px !default;
 $bold-font-weight: bold !default;
-$font-family: 'Merriweather', 'PT Serif', Georgia, 'Times New Roman', serif !default;
+$font-family: 'Amiri', serif !default;
 $line-height: 1.5 !default;
-$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
+$heading-font-family: 'Amiri', serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
-$monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
+$monospace-font-family: 'IBM Plex Mono', monospace !default;
+$monospace-font-size: 14px !default;
 $h1: 2.998rem !default;
 $h2: 1.5rem !default;
 $h3: 1.25rem !default;
@@ -32,6 +33,7 @@ $viewport-medium: 48em;
 $viewport-large: 64em;
 
 // Colors
+$white: #fafafa !default;
 $blue: #0076df !default;
 $red: #f95020 !default;
 $green: #00cf26 !default;
@@ -39,12 +41,13 @@ $yellow: #efcc00 !default;
 $orange: #ffcc22 !default;
 $purple: #f92080 !default;
 $dark-blue: #00369f !default;
+$light-blue: #0057ff !default;
 $green: #00ab37 !default;
 $dark-green: #009f06 !default;
 $light-pink: #ffdddd !default;
 $light-green: #ddffdd !default;
 $dark-gray: #333 !default;
-$mid-gray: #777 !default;
+$mid-gray: #444 !default;
 $light-gray: #ccc !default;
 $lighter-gray: #eee !default;
 $darken-1: rgba(#000,.0625) !default;
@@ -93,33 +96,33 @@ $form-field-padding-x: .5rem;
 
 // Code
 $pre-border-radius: 0;
-$pre-background-color: #fafafa;
-$hljs-comment: $mid-gray;
-$hljs-keyword: $dark-blue;
-$hljs-name: $dark-gray;
+$pre-background-color: $mid-gray;
+$hljs-comment: $white;
+$hljs-keyword: $light-blue;
+$hljs-name: $white;
 $hljs-number: $dark-green;
 $hljs-string: $red;
 $hljs-title: $red;
-$hljs-type: $dark-blue;
-$hljs-tag: $dark-blue;
+$hljs-type: $light-blue;
+$hljs-tag: $light-blue;
 $hljs-attribute: $dark-green;
 $hljs-regexp: $dark-green;
 $hljs-symbol: $purple;
-$hljs-built-in: $dark-blue;
-$hljs-preprocessor: $mid-gray;
+$hljs-built-in: $light-blue;
+$hljs-preprocessor: $white;
 $hljs-deletion: $light-pink;
 $hljs-addition: $light-green;
-$hljs-change: $dark-blue;
-$hljs-chunk: $light-gray;
+$hljs-change: $light-blue;
+$hljs-chunk: $white;
 
 // Header
 $header-border-top: thin solid #f3f3f3;
-$header-color: $dark-gray;
-$header-bg-color: #fafafa;
+$header-color: $white;
+$header-bg-color: $dark-gray;
 $header-font-weight: 300;
 
 // Nav
-$nav-color: $mid-gray;
+$nav-color: $white;
 $nav-link-color: #444;
 $nav-padding: $space-2;
 $nav-link-padding-x: $space-2;
@@ -129,7 +132,7 @@ $nav-active-border-bottom: 1px solid $light-gray;
 // Footer
 $footer-border-top: thin solid #f3f3f3;
 $footer-padding: $space-3;
-$footer-color: #7a7a7a;
-$footer-bg-color: #fafafa;
+$footer-color: $white;
+$footer-bg-color: $dark-gray;
 $footer-font-weight: 300;
 $footer-font-size: .75rem;
