--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">GitHub</a>.
+      This is my <a href="https://github.com/benbenolson/">GitHub</a>, and this is my <a href="https://gitlab.com/molson5">GitLab</a>.
     </small>
   </div>
 </footer>
