--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -6,7 +6,7 @@ blockquote {
 }
 
 blockquote footer {
-  background-color: #fff;
+  background-color: $dark-gray;
   border-color: transparent;
   color: #7a7a7a;
   font-size: .85rem;
