--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,7 +5,7 @@
 
 .posts .post {
   margin-bottom: 0.75em;
-  border-bottom: thin solid #f3f3f3;
+  border-bottom: thin solid $white;
 }
 
 .posts .post:last-child {
@@ -17,7 +17,7 @@
 .post-link .post-title {
   margin-top: 0;
   font-weight: 600;
-  color: #333;
+  color: $white;
 }
 
 .post-footer {
@@ -39,10 +39,10 @@
   font-weight: 300;
   margin: 0;
   padding: .25em 0;
-  color: #7a7a7a;
+  color: $white;
   font-style: italic;
 }
 
 .related-post-title {
-  border-bottom: thin solid #f3f3f3;
+  border-bottom: thin solid $white;
 }
